# tamadoro

./: CLAUDE.md  Cargo.toml  README.md  test_layout.rs
src/: app.rs  ascii_digits.rs  colors.rs  game.rs  main.rs  pets.rs
